--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,7 @@
 hs_err_pid*
 
 ### vscode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 *.code-workspace
 
 ### Gradle ###
